npm and bower versions aligned

--- a/test/test-client.html
+++ b/test/test-client.html
@@ -4,7 +4,7 @@
     <script type="text/javascript" src="../src/logmatic.min.js"></script>
     <script>
       // Set your API key
-      logmatic.init('<your_api_key>');
+      logmatic.init('iGNxbieiR8uKGMJogoZYWA');
 
       // Optional init methods
       logmatic.setMetas({ 'userId': '1234'}); // OPTIONAL add some meta attributes in final JSON entries
