--- a/test/test-client.html
+++ b/test/test-client.html
@@ -4,12 +4,12 @@
     <script type="text/javascript" src="../src/logmatic.min.js"></script>
     <script>
       // Set your API key
-      logmatic.init('d-h2H-5mT9GiqqDQlIRA3Q');
+      logmatic.init('iGNxbieiR8uKGMJogoZYWA');
 
       // Optional init methods
       logmatic.setMetas({ 'userId': '1234',"hostname":"front","appname":"myapp"}); // OPTIONAL add some meta attributes in final JSON entries
       logmatic.setSendConsoleErrors('exception'); // OPTIONAL fwd any error using 'exception' as JSON attr
-      logmatic.setSendConsoleLogs('level'); // OPTIONAL fwd any console log using 'level' as JSON attr
+      logmatic.setSendConsoleLogs('severity'); // OPTIONAL fwd any console log using 'severity' as JSON attr
       logmatic.setIPTracking('client.IP'); // OPTIONAL resolve client IP and copy it @ 'client.IP'
       logmatic.setUserAgentTracking('client.user-agent'); // OPTIONAL resolve client IP and copy it @ 'client.user-agent'
       logmatic.setURLTracking('url'); // OPTIONAL resolve URL and copy it @ 'url'
