change of versions 0.0.9

--- a/test/test-client.html
+++ b/test/test-client.html
@@ -4,7 +4,7 @@
     <script type="text/javascript" src="../src/logmatic.min.js"></script>
     <script>
       // Set your API key
-      logmatic.init('iGNxbieiR8uKGMJogoZYWA');
+      logmatic.init('<your_api_key>');
 
       // Optional init methods
       logmatic.setMetas({ 'userId': '1234',"hostname":"front","appname":"myapp"}); // OPTIONAL add some meta attributes in final JSON entries
