remove unsed vars

--- a/test/test-client.html
+++ b/test/test-client.html
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="../src/logmatic.min.js"></script>
     <script>
       // Set your API key
-      logmatic.init('<api_key>');
+      logmatic.init('i2t7g8GRRImzb8rjDqDRUg');
 
       // Optional init methods
       logmatic.setMetas({ 'userId': '1234',"hostname":"front","appname":"myapp"}); // OPTIONAL add some meta attributes in final JSON entries
